Optimizacion de imagenes

--- a/html/contact.html
+++ b/html/contact.html
@@ -245,6 +245,7 @@
                     <i class="bi bi-cash"></i>
                     <i class="bi bi-bank"></i>
                     <i class="bi bi-credit-card-2-back-fill"></i>
+                    <i class="bi bi-paypal"></i>
                 </p>
             </section>
             <!-- Redes sociales, newsletter y contacto -->
