--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </nav>
     <!-- Imagen principal: carousel de imagenes -->
     <div class="carousel container-flex">
-        <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselCaptions" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -105,16 +105,6 @@
                     aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="3"
-                    aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="4"
-                    aria-label="Slide 5"></button>
-                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="5"
-                    aria-label="Slide 6"></button>
-                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="6"
-                    aria-label="Slide 7"></button>
-                <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="7"
-                    aria-label="Slide 8"></button>
             </div>
             <div class="carousel__inner carousel-inner">
                 <div class="carousel__item carousel-item active">
@@ -128,70 +118,17 @@
                     <img src="./images/slider_banner-nintendo-switch.avif" class="d-block w-100"
                         alt="banner nintendo switch" />
                 </div>
-                <div class="carousel__item carousel-item">
-                    <img src="./images/slider_Forza-Horizon-5.avif" class="d-block w-100" alt="forza horizon 5" />
-                    <div class="carousel__caption carousel-caption d-none d-md-block">
-                        <h5 class="carousel__title">FORZA HORIZON 5</h5>
-                        <p class="carousel__text">
-                            Forza Horizon 5 es un videojuego de carreras de próxima aparición desarrollado por
-                            Playground Games y publicado por Xbox Game Studios.
-                        </p>
-                    </div>
-                </div>
-                <div class="carousel__item carousel-item">
-                    <img src="./images/slider_Borderlands-2.avif" class="d-block w-100" alt="borderlands 2" />
-                    <div class="carousel__caption carousel-caption d-none d-md-block">
-                        <h5 class="carousel__title">BORDERLANDS 2</h5>
-                        <p class="carousel__text">
-                            Borderlands 2 es un videojuego de disparos en primera persona con elementos de rol, se trata
-                            de la secuela del videojuego de 2009, Borderlands.
-                        </p>
-                    </div>
-                </div>
-                <div class="carousel__item carousel-item">
-                    <img src="./images/slider_Red-Dead-Redemption-2.avif" class="d-block w-100"
-                        alt="red dead redemption 2" />
-                    <div class="carousel__caption carousel-caption d-none d-md-block">
-                        <h5 class="carousel__title">RED DEAD REDEMPTION 2</h5>
-                        <p class="carousel__text">
-                            Red Dead Redemption 2, estilizado Red Dead Redemption II, es un videojuego de
-                            acción-aventura western, en un mundo abierto y en perspectiva de primera y tercera persona,
-                            con componentes para un jugador y multijugador.
-                        </p>
-                    </div>
-                </div>
-                <div class="carousel__item carousel-item">
-                    <img src="./images/slider_The-Witcher-3-Wild-Hunt.avif" class="d-block w-100"
-                        alt="the witcher 3 - wild hunt" />
-                    <div class="carousel__caption carousel-caption d-none d-md-block">
-                        <h5 class="carousel__title">THE WITCHER 3</h5>
-                        <p class="carousel__text">
-                            The Witcher 3: Wild Hunt es un videojuego de rol desarrollado y publicado por la compañía
-                            polaca CD Projekt RED. Esta compañía es la desarrolladora mientras que la distribución corre
-                            a cargo de la Warner Bros.
-                        </p>
-                    </div>
-                </div>
-                <div class="carousel__item carousel-item">
-                    <img src="./images/slider_COD-Modern-Warfare.avif" class="d-block w-100" alt="cod modern warfare" />
-                    <div class="carousel__caption carousel-caption d-none d-md-block">
-                        <h5 class="carousel__title">COD MODERN WARFARE</h5>
-                        <p class="carousel__text">
-                            Modern Warfare es un videojuego de disparos en primera persona desarrollado por Infinity
-                            Ward y publicado por Activision. Es el decimosexto juego de la saga Call of Duty y es un
-                            reinicio de la serie Modern Warfare.
-                        </p>
-                    </div>
-                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselCaptions" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
     </div>
     <main class="main">
@@ -632,6 +569,7 @@
                     <i class="bi bi-cash"></i>
                     <i class="bi bi-bank"></i>
                     <i class="bi bi-credit-card-2-back-fill"></i>
+                    <i class="bi bi-paypal"></i>
                 </p>
             </section>
             <!-- Redes sociales, newsletter y contacto -->
